# dolphin-tmsu-plugin

./: .gitignore  CMakeLists.txt  README.md  tmsuplugin.metainfo.xml
src/: CMakeLists.txt  additionaltagswidget.cpp  additionaltagswidget.h  flowlayout.h  tagdialog.cpp  tagdialog.h  tagflowlayout.cpp  tagflowlayout.h  taglineedit.cpp  taglineedit.h  tagusage.cpp  tagusage.h  tagusagelistmodel.cpp  tagusagelistmodel.h  tagvalidator.cpp  tagvalidator.h  tagwidget.cpp  tagwidget.h  tmsuplugin.cpp  tmsuplugin.desktop  tmsuplugin.h  tmsuplugin.json  tmsupluginsettings.kcfg  tmsupluginsettings.kcfgc  tmsutag.cpp  tmsutag.h
src/qt/: flowlayout.cpp  flowlayout.h
